[package]
name = "webgl-water"
version = "0.1.0"
authors = ["Chiuzbaian Rareș-Ciprian <chiuzbaianrares20@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
bincode = "1.3.3"
blender-armature = "0.9.2"
blender-mesh = "0.8.9"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
nalgebra = "0.32.5"
wasm-bindgen = "0.2.92"
